--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
-    "next": "15.4.2",
+    "next": "^15.5.6",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^24.17.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1"
   },
