--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "^15.5.6",
