--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "eslint-config-next": "^16.0.8",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
-    "next": "^15.5.6",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^24.17.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "sonner": "^2.0.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
