--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "electron-next": "^3.1.5",
     "eslint-config-next": "^16.0.8",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
@@ -58,6 +59,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "electron": "^39.2.3",
+    "electron-builder": "^26.0.12",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
