--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beooktopdf",
+  "name": "beook2pdf",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "electron": "electron electron-main.js"
+    "electron": "electron electron-main.js",
+    "dev:electron": "cross-env NODE_ENV=development electron electron-main.js",
+    "rebuild:electron": "electron-builder install-app-deps",
+    "dist:win": "npm run rebuild:electron && npm run build && node ./tools/prepare-electron.mjs && electron-builder --win nsis",
+    "release:win": "npm run dist:win -- --publish always"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -31,7 +35,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "better-sqlite3": "^12.2.0",
+    "better-sqlite3": "^12.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
@@ -42,7 +46,8 @@
     "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
-    "puppeteer": "^24.17.0",
+    "puppeteer": "24.34.0",
+    "puppeteer-core": "24.34.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "sonner": "^2.0.7",
@@ -62,6 +67,13 @@
     "electron-builder": "^26.0.12",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "cross-env": "^7.0.3",
+    "node-abi": "^4.24.0",
+    "@electron/rebuild": "^4.0.2"
+  },
+  "main": "electron-main.js",
+  "overrides": {
+    "node-abi": "^4.24.0"
   }
 }
